# blog-agent-kit

./: .gitignore  AGENTS.md  CHECKS.md  CLAUDE.md  LICENSE  LOOPS.md  MEMORY.md  NEXT_ACTIONS.md  README.md  VISION.md  pyproject.toml
.claude/skills/blog-article-generate/: SKILL.md
docs/: AGENTS.md  claude-scheduled-tasks.md  codex-automation.md  openclaw-hermes-operations.md  openclaw-integration.md  oss-release.md  vps-artifact-workflow.md
examples/: automation-prompt.md  openclaw-prompt.md
scripts/: auto-pull-vps-artifacts.sh  install-auto-pull-launch-agent.sh  observe_truth.py  pull-remote-artifacts.sh
src/blog_agent_kit/: __init__.py  cli.py
templates/topic/: agent-prompt.md  brief.yml  reviewer-prompt.md
templates/topic/output/: claims_table.md  draft.md  handoff.json  image_prompts.md  iteration_log.md  outline.md  research_pack.md  review_round_1.md  review_round_2.md  sources.md  x_posts.md
tests/: test_cli.py  test_pull_remote_artifacts_script.py
